corrected main section mobile display

--- a/sass/Pages/_le_calorifugeage.scss
+++ b/sass/Pages/_le_calorifugeage.scss
@@ -1,7 +1,7 @@
 body{
     background-color: $background-text;
 }
-.main{
+.main_def_page{
     padding: 0 100px;
     &__h1{
         color: $primary-color;
